tests/check/launch_bounds_target.co
// TODO-RUN: not choreo %s 2>&1 | FileCheck %s
// CHECK: error: launch_bounds is only supported for the cute target.
// CHECK: Totally 1 errors have been detected.

__co__ void bad_target() {
  parallel by 1 : block {
    launch_bounds(7);
  }
}

int main() { return 0; }